@@ -24,6 +24,7 @@
 	* Fixed bug #14491: htmlArea RTE: disableColorPicker not always honoured
 	* Fixed bug #14494: htmlArea RTE: backpath is not correctly set
 	* Follow-up to issue #14494: htmlArea RTE: backpath is not correctly set
+	* Further follow-up to issue #14494: htmlArea RTE: backpath is not correctly set
 
 2010-05-27  Oliver Hader  <oliver@typo3.org>
 
